--- a/index.html
+++ b/index.html
@@ -32,6 +32,49 @@
       justify-content: center;
       text-rendering: optimizeLegibility;
       -webkit-font-smoothing: antialiased;
+      position: relative;
+    }
+
+    body::before {
+      content: '';
+      position: fixed;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background:
+        radial-gradient(ellipse at 20% 30%, rgba(0, 255, 200, 0.15) 0%, transparent 50%),
+        radial-gradient(ellipse at 80% 60%, rgba(100, 50, 255, 0.12) 0%, transparent 50%),
+        radial-gradient(ellipse at 40% 80%, rgba(0, 150, 255, 0.1) 0%, transparent 50%);
+      animation: aurora 20s ease-in-out infinite;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    @keyframes aurora {
+      0%, 100% {
+        transform: translate(0, 0) rotate(0deg);
+        opacity: 0.6;
+      }
+      33% {
+        transform: translate(10%, -10%) rotate(5deg);
+        opacity: 0.8;
+      }
+      66% {
+        transform: translate(-10%, 5%) rotate(-5deg);
+        opacity: 0.7;
+      }
+    }
+
+    @keyframes breathe {
+      0%, 100% {
+        transform: scale(1);
+        opacity: 1.25;
+      }
+      50% {
+        transform: scale(1.02);
+        opacity: 0.75;
+      }
     }
 
     h1 {
@@ -39,6 +82,9 @@
       font-weight: 400;
       letter-spacing: 0.02em;
       margin: 0;
+      animation: breathe 4s ease-in-out infinite;
+      position: relative;
+      z-index: 1;
     }
   </style>
 </head>
